--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li>
             <a href="http://www.youtube.com/c/AndroVision">
               <img src="./images/icons/youtube.png" alt="" />
-              YouTube
+              YouTube Channel
             </a>
           </li>
 
